WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167733
Column progression wrong after enabling pagination on RTL document
https://bugs.webkit.org/show_bug.cgi?id=167733
Summary
Column progression wrong after enabling pagination on RTL document
Antti Koivisto
Reported
2017-02-02 08:42:12 PST
Column progression depends on document direction but is not updated when direction changes.
Attachments
patch
(5.65 KB, patch)
2017-02-02 08:46 PST
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-02-02 08:46:50 PST
Created
attachment 300413
[details]
patch
Antti Koivisto
Comment 2
2017-02-02 08:47:34 PST
<
rdar://problem/29012252
>
Antti Koivisto
Comment 3
2017-02-02 09:07:53 PST
Committed
r211564
: <
http://trac.webkit.org/changeset/211564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug