Column progression wrong after enabling pagination on RTL document https://bugs.webkit.org/show_bug.cgi?id=167733 <rdar://problem/29012252>

Reviewed by Zalan Bujtas.

Source/WebCore:

Column progression depends on document direction but was not updated when direction changed.

Test: fast/multicol/pagination/pagination-dynamic-rtl.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange):

    Update column styles if document direction changes.

LayoutTests:

* fast/multicol/pagination/pagination-dynamic-rtl-expected.html: Added.
* fast/multicol/pagination/pagination-dynamic-rtl.html: Added.


Canonical link: https://commits.webkit.org/184778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211564 268f45cc-cd09-0410-ab3c-d52691b4dbfc